added winok updates

--- a/coding_task.ipynb
+++ b/coding_task.ipynb
@@ -7,29 +7,29 @@
     "### Coding Challenge\n",
     "\n",
     "##### Background\n",
-    "- This is an open-problem without definitive solutions.\n",
-    "- You will be assessed on the following skills. Please demonstrate, to the best of your abilities, your skills with:\n",
-    "    - Algorithms\n",
+    "This is an open problem without definitive solutions. You will be assessed on the following skills:\n",
+    "    - Algorithms \n",
     "    - Data structures\n",
     "    - Computation/memory efficiency\n",
     "    - Data handling/presentation\n",
-    "- Clearly describe any assumptions made during the completion of this challenge. Clear descriptions of the thought-process are highly beneficial.\n",
-    "- Use Python 3 (any version) with commonly used libraries (a few are provided below to start). Try to avoid obscure libraries which are not regularly maintained or not openly accessible. You should aim to complete this challenge with basic libraries. Remember, demonstrate your ability to code!\n",
-    "- Submit this jupyter notebook with all the outputs already produced so that no further computation is needed. You will only be assessed on the outputs already visible in this notebook.\n",
-    "- You may choose to add attachments to your submission, provided your total submission size is under 20MB. Please submit a .zip file containing your attachments and the completed .ipynb if you choose.\n",
-    "- Do not assume the examiner of this challenge has access your Python version, dependencies, or computational facility to run your code.\n",
     "\n",
-    "##### Introduction\n",
-    "1) You are provided with a .csv file containing a minimum spanning tree (MST). The file contains 2 columns. Each row represents one edge connecting 2 nodes shown by the values in the 2 columns. The edges are bidirectional.\n",
-    "2) You are also provided with a number containing the \"root node\" of the minimum spanning tree. This can be thought of as the origin from which the all the branches of the MST extend from. This root node is connected to several other nodes which can be found in the edges defined by it and another node.\n",
-    "3) The exact context of this MST is irrelevant. However, you will aim to produce some analysis to better understand its topology.\n",
-    "4) The focus of this exercise is algorithms and data structures. Some useful background resources which may help you include graph theory, operations research, computer science fundamentals, and calculus.\n",
+    "Clearly describe any assumptions made and your thought-process.\n",
+    "Use Python 3 (any version) with basic, commonly used, open access libraries (a few are provided below to start). Do not assume the examiner of this challenge has access your Python version, dependencies, or computational facility to run your code. You will only be assessed on the outputs visible in this notebook and any attachements you provide.\n",
+    "\n",
+    "You are provided with:\n",
+    "1) A .csv file containing a minimum spanning tree (MST). Each row represents one edge connecting 2 nodes shown by the values in the 2 columns. The edges are bidirectional.\n",
+    "2) A number containing the \"root node\" of the minimum spanning tree. This can be thought of as the origin from which the all the branches of the MST extend from. This root node is connected to several other nodes which can be found in the edges defined by it and another node.\n",
+    "\n",
+    "Although the MST context is unknown, you will aim to produce analyses to better understand its topology using your algorithms and data structure skills. Useful background resources include graph theory, operations research, computer science fundamentals, and calculus.\n",
     "\n",
     "##### To Do\n",
-    "1) Produce a visualization of the MST with the root node highlighted. Make this visualization as high quality and visually appealing/informative as possible.\n",
-    "2) Compute the distance of each node on the MST to the root node. You may assume edges are of unit value. Re-plot your solution to #1 by coloring the nodes with these distance values. Please include a color bar to show the varying distances.\n",
-    "3) Implement an algorithm to assign each node in the MST to a \"major\" branch. See the readme for a visual example. The MST provided should contain no more than 5 major branches. A major branch is defined as a group of nodes connected along the same branch of the MST originating from a single edge connected to the root node. All nodes should be assigned to a major branch. Intuitively, this can be thought of as a tree containing a few large branches connected directly to the trunk which then spread out into many smaller branches. You should thoroughly explain the thought process when defining your criteria when grouping nodes into one major branch. Please label your major branches with numerical values (e.g. 0,1,2,3,4,5). Re-plot your solution to #1 by coloring the grouped nodes by their major branch this time.\n",
-    "4) (Extra, attempt is optional) Produce visualizations to show the relationship between the major branch groupings, distances, and other features of the MST which you think may be interesting. These visualizations should help communicate certain properties of the MST in a succinct manner to a lay audience."
+    "1) Produce a high quality and informative visualization of the MST with the root node highlighted.\n",
+    "2) Compute the distance of each node on the MST to the root node. You may assume edges are of unit value. Re-plot your solution to #1 by colouring the nodes with these distance values. Please include a colour bar to show the varying distances.\n",
+    "3) Algorithmically assign each node in the MST to a \"major\" branch. A major branch is defined as a group of nodes connected along the same branch of the MST originating from a single edge connected to the root node. Intuitively, this can be thought of as a tree containing a few large branches connected directly to the trunk which then spread out into many smaller branches. You should thoroughly explain the thought process when defining your criteria when grouping nodes into one major branch. There are a maximum of 5 major branches. Please label your major branches with numerical values (e.g. 0,1,2,3,4). Re-plot your solution to #1 by colouring the grouped nodes by their major branch.\n",
+    "4) (Optional Task) Produce visualizations to show the relationship between the major branch groupings, distances, and other features of the MST which you think may be interesting. These visualizations should help communicate certain properties of the MST in a succinct manner to a lay audience.\n",
+    "\n",
+    "##### Submission\n",
+    "Submit this jupyter notebook with all the outputs already produced so that no further computation is needed. You may choose to add attachments to your submission, provided your total submission size is under 20MB. Please submit a .zip file containing your attachments and the completed .ipynb if you choose."
    ]
   },
   {
