--- a/coding_task.ipynb
+++ b/coding_task.ipynb
@@ -8,25 +8,21 @@
     "\n",
     "##### Background\n",
     "This is an open problem without definitive solutions. You will be assessed on the following skills:\n",
-    "    - Algorithms \n",
-    "    - Data structures\n",
-    "    - Computation/memory efficiency\n",
-    "    - Data handling/presentation\n",
+    "- Algorithms \n",
+    "- Data structures\n",
+    "- Computation/memory efficiency\n",
+    "- Data handling/presentation\n",
     "\n",
-    "Clearly describe any assumptions made and your thought-process.\n",
-    "Use Python 3 (any version) with basic, commonly used, open access libraries (a few are provided below to start). Do not assume the examiner of this challenge has access your Python version, dependencies, or computational facility to run your code. You will only be assessed on the outputs visible in this notebook and any attachements you provide.\n",
+    "Clearly describe any assumptions made and your thought-process. Use Python 3 (any version) with basic, commonly used, open access libraries (a few are provided below to start). Do not assume the examiner of this challenge has access your Python version, dependencies, or computational facility to run your code. You will only be assessed on the outputs visible in this notebook and any attachements you provide.\n",
     "\n",
     "You are provided with:\n",
     "1) A .csv file containing a minimum spanning tree (MST). Each row represents one edge connecting 2 nodes shown by the values in the 2 columns. The edges are bidirectional.\n",
     "2) A number containing the \"root node\" of the minimum spanning tree. This can be thought of as the origin from which the all the branches of the MST extend from. This root node is connected to several other nodes which can be found in the edges defined by it and another node.\n",
     "\n",
-    "Although the MST context is unknown, you will aim to produce analyses to better understand its topology using your algorithms and data structure skills. Useful background resources include graph theory, operations research, computer science fundamentals, and calculus.\n",
-    "\n",
     "##### To Do\n",
     "1) Produce a high quality and informative visualization of the MST with the root node highlighted.\n",
     "2) Compute the distance of each node on the MST to the root node. You may assume edges are of unit value. Re-plot your solution to #1 by colouring the nodes with these distance values. Please include a colour bar to show the varying distances.\n",
-    "3) Algorithmically assign each node in the MST to a \"major\" branch. A major branch is defined as a group of nodes connected along the same branch of the MST originating from a single edge connected to the root node. Intuitively, this can be thought of as a tree containing a few large branches connected directly to the trunk which then spread out into many smaller branches. You should thoroughly explain the thought process when defining your criteria when grouping nodes into one major branch. There are a maximum of 5 major branches. Please label your major branches with numerical values (e.g. 0,1,2,3,4). Re-plot your solution to #1 by colouring the grouped nodes by their major branch.\n",
-    "4) (Optional Task) Produce visualizations to show the relationship between the major branch groupings, distances, and other features of the MST which you think may be interesting. These visualizations should help communicate certain properties of the MST in a succinct manner to a lay audience.\n",
+    "3) Algorithmically assign each node in the MST to a \"major\" branch. A major branch is defined as a group of nodes connected along the same branch of the MST originating from a single edge connected to the root node. A visual aid is provided in \"demo.png\". Please label your major branches with numerical values (e.g. 0,1,2,3,4,etc) with a maximum of 7. Re-plot your solution to #1 by colouring the grouped nodes by their major branch.\n",
     "\n",
     "##### Submission\n",
     "Submit this jupyter notebook with all the outputs already produced so that no further computation is needed. You may choose to add attachments to your submission, provided your total submission size is under 20MB. Please submit a .zip file containing your attachments and the completed .ipynb if you choose."
@@ -101,20 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<networkx.classes.graph.Graph at 0x20f613486a0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Task 1 here\n",
     "\n",
@@ -157,22 +142,6 @@
     "\n",
     "# Hint: matrix reduction or recursion may be a good starting point\n",
     "# Hint: the visualization should show the root node with branches of different colors originating from it, where each branch is a major branch in the MST."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Task 4 (Optional) - Produce Interesting Visualizations to Outline the MST's Properties"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Task 4 here (only attempt if you have time)"
    ]
   }
  ],
