--- a/coding_task.ipynb
+++ b/coding_task.ipynb
@@ -25,7 +25,7 @@
     "3) Algorithmically assign each node in the MST to a \"major\" branch. A major branch is defined as a group of nodes connected along the same branch of the MST originating from a single edge connected to the root node. A visual aid is provided in \"demo.png\". Please label your major branches with numerical values (e.g. 0,1,2,3,4,etc) with a maximum of 7. Re-plot your solution to #1 by colouring the grouped nodes by their major branch.\n",
     "\n",
     "##### Submission\n",
-    "Submit this jupyter notebook with all the outputs already produced so that no further computation is needed. You may choose to add attachments to your submission, provided your total submission size is under 20MB. Please send a .zip file of all your outputs (attachments + Jupyter Notebook) to CVM personnel (cvm_personnel@cardiov.ox.ac.uk)"
+    "Submit this jupyter notebook with all the outputs already produced so that no further computation is needed. You may choose to add attachments to your submission, provided your total submission size is under 20MB. Please send a .zip file of all your outputs (attachments + Jupyter Notebook) to CVM personnel (cvm_personnel@cardiov.ox.ac.uk). Please return your results by the end of the week (11th of December 11:59PM UK Time)."
    ]
   },
   {
